--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,7 @@ Temporary Items
 
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
+
+
+## CUSTOM IGNORES
+/src/gapi-config.js
