--- a/functions/package.json
+++ b/functions/package.json
@@ -10,10 +10,12 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "firebase-admin": "~5.13.0",
     "firebase-functions": "^2.0.0",
-    "googleapis": "^27.0.0"
+    "googleapis": "^27.0.0",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
