--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^1.4.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-grid-gallery": "^0.5.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
