--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "photo-stream",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.3",
+    "@material-ui/icons": "^3.0.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-grid-gallery": "^0.5.1",
