--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "FCM Photo Stream",
-  "name": "Photo Stream FCM Trainingslager",
+  "short_name": "Hochzeits Photo Stream",
+  "name": "Photo Stream Anna + Michl",
   "icons": [
     {
       "src": "android-icon-36x36.png",
