Configure firebase hosting and fix iPad issue

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Hochzeits Photo Stream",
-  "name": "Photo Stream Anna + Michl",
+  "short_name": "Anna + Michl Fotos",
+  "name": "Anna + Michl Foto Stream",
   "icons": [
     {
       "src": "android-icon-36x36.png",
