--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://mmmichl.github.io/photo-stream/",
+  "homepage": "https://wedding-1533550385088.firebaseapp.com/",
   "devDependencies": {
     "gh-pages": "^1.2.0"
   }
