--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^3.0.1",
+    "debounce": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-grid-gallery": "^0.5.1",
